@@ -17,6 +17,7 @@
 package org.graylog2.rest.resources.users;
 
 import com.codahale.metrics.annotation.Timed;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -101,6 +102,7 @@ import org.graylog2.users.UserOverviewDTO;
 import org.joda.time.DateTimeZone;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.threeten.extra.PeriodDuration;
 
 import javax.annotation.Nullable;
 import java.net.URI;
@@ -116,6 +118,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -318,12 +321,10 @@ public class UsersResource extends RestResource {
                 builder.roles(userDTO.roles().stream().map(roleNameMap::get).collect(Collectors.toSet()));
             }
             userDTO.authServiceId().ifPresent(
-                    serviceId -> {
-                        builder.authServiceEnabled(activeAuthService.isPresent() && serviceId.equals(activeAuthService.get().id()));
-                    }
+                    serviceId -> builder.authServiceEnabled(activeAuthService.isPresent() && serviceId.equals(activeAuthService.get().id()))
             );
             return builder.build();
-        }).collect(Collectors.toList());
+        }).toList();
 
         final PaginatedList<UserOverviewDTO> userOverviewDTOS = new PaginatedList<>(users, result.pagination().total(),
                 result.pagination().page(), result.pagination().perPage());
@@ -705,10 +706,16 @@ public class UsersResource extends RestResource {
 
         final ImmutableList.Builder<TokenSummary> tokenList = ImmutableList.builder();
         for (AccessToken token : accessTokenService.loadAll(user.getName())) {
-            tokenList.add(TokenSummary.create(token.getId(), token.getName(), token.getLastAccess()));
+            tokenList.add(TokenSummary.create(token.getId(), token.getName(), token.getLastAccess(), token.getCreatedAt()));
         }
 
         return TokenList.create(tokenList.build());
+    }
+
+    public record GenerateTokenTTL(@JsonProperty Optional<PeriodDuration> tokenTTL) {
+        public PeriodDuration getTTL(Supplier<PeriodDuration> defaultSupplier) {
+            return this.tokenTTL.orElseGet(defaultSupplier);
+        }
     }
 
     @POST
@@ -718,14 +725,19 @@ public class UsersResource extends RestResource {
     public Token generateNewToken(
             @ApiParam(name = "userId", required = true) @PathParam("userId") String userId,
             @ApiParam(name = "name", value = "Descriptive name for this token (e.g. 'cronjob') ", required = true) @PathParam("name") String name,
-            @ApiParam(name = "JSON Body", value = "Placeholder because POST requests should have a body. Set to '{}', the content will be ignored.", defaultValue = "{}") String body) {
-        final User user = loadUserById(userId);
-        final String username = user.getName();
+            @ApiParam(name = "JSON Body", value = "Can optionally contain the token's TTL.", defaultValue = "{\"token_ttl\":null}") GenerateTokenTTL body) {
+        final User futureOwner = loadUserById(userId);
+        final User currentUser = getCurrentUser();
 
-        if (!isAccessAllowed(user)) {
-            throw new ForbiddenException("Not allowed to create tokens for user " + username);
+        if (currentUser == null) {
+            throw new ForbiddenException("Not allowed to create tokens for unknown user.");
         }
-        final AccessToken accessToken = accessTokenService.create(user.getName(), name);
+        validatePermissionForTokenCreation(currentUser, futureOwner);
+
+        if (body == null) {
+            body = new GenerateTokenTTL(Optional.empty());
+        }
+        final AccessToken accessToken = accessTokenService.create(futureOwner.getName(), name, body.getTTL(() -> clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES).defaultTTLForNewTokens()));
 
         return Token.create(accessToken.getId(), accessToken.getName(), accessToken.getToken(), accessToken.getLastAccess());
     }
@@ -758,16 +770,24 @@ public class UsersResource extends RestResource {
     }
 
     @VisibleForTesting
-    boolean isAccessAllowed(User user) {
-        final boolean permitted = isPermitted(USERS_TOKENCREATE, user.getName());
-        final boolean isAdmin = isAdmin(user);
-        if (isAdmin) {
-            return permitted;
+    void validatePermissionForTokenCreation(User callingUser, User futureOwner) {
+        if (!isPermitted(USERS_TOKENCREATE, callingUser.getName())) {
+            throw new ForbiddenException(callingUser.getName() + " is not allowed to create token.");
         }
-        final boolean externalAllowed = isExternalUserAllowed(user);
-        final boolean adminAllowed = isAllowedAsNoAdmin(user);
-
-        return permitted && externalAllowed && adminAllowed;
+        if (isAdmin(callingUser)) {
+            // Not throwing an exception here, admin is allowed to create a token.
+            return;
+        }
+        if (!Objects.equals(callingUser.getId(), futureOwner.getId())) {
+            // Only admins are allowed to create tokens for other users, but we already checked for admin above.
+            throw new ForbiddenException("Only admins are allowed to create a token for another user.");
+        }
+        if (!isExternalUserAllowed(callingUser)) {
+            throw new ForbiddenException("External users are not allowed to create tokens.");
+        }
+        if (!isAllowedAsNoAdmin(callingUser)) {
+            throw new ForbiddenException("Only admins are allowed to create tokens.");
+        }
     }
 
     private boolean isAdmin(User user) {
@@ -826,8 +846,8 @@ public class UsersResource extends RestResource {
             wildcardPermissions = userManagementService.getWildcardPermissionsForUser(user);
             grnPermissions = userManagementService.getGRNPermissionsForUser(user);
         } else {
-            wildcardPermissions = ImmutableList.of();
-            grnPermissions = ImmutableList.of();
+            wildcardPermissions = List.of();
+            grnPermissions = List.of();
         }
 
         final Optional<AuthServiceBackendDTO> activeAuthService = globalAuthServiceConfig.getActiveBackendConfig();
@@ -877,7 +897,7 @@ public class UsersResource extends RestResource {
 
     private UserOverviewDTO getAdminUserDTO(AllUserSessions sessions) {
         final Optional<User> optionalAdmin = userManagementService.getRootUser();
-        if (!optionalAdmin.isPresent()) {
+        if (optionalAdmin.isEmpty()) {
             return null;
         }
         final User admin = optionalAdmin.get();
